Split UI and API for faster interation.